[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "causal-learn>=0.1.4.5",
    "causaldata>=0.1.5",
    "causalinference>=0.1.3",
    "dowhy>=0.14",
    "econml>=0.16.0",
    "linearmodels>=7.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rddensity>=2.4.6",
    "rdrobust>=1.3.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
